alignment issues for authentication layer and registraton layer

--- a/public/stylesheets/coke_messenger/messenger.css
+++ b/public/stylesheets/coke_messenger/messenger.css
@@ -184,7 +184,7 @@ h3.busq_titulo{font-size:18px;color:#343434;width:48%;float:left;padding-left:5p
 .aviso .destacado{text-align:left;font-size:18px;line-height:22px;color:#343434;margin:20px auto 40px;padding:0 26px;clear:both;}
 .aviso p{text-align:left;font-size:12px;line-height:14px;color:#979797;margin:5px auto;padding:0 26px;}
 .aviso .scroll{overflow-x:hidden;overflow-y:scroll;}
-.aviso .columna_izq{width:194px;padding:0 10px 0 26px;float:left;text-align:left;border-right:1px solid #cacaca;min-height:210px;}
+.aviso .columna_izq{width:196px;padding:0 10px 0 26px;float:left;text-align:left;border-right:1px solid #cacaca;min-height:210px;}
 .aviso .columna_der{width:212px;padding:0 10px;float:left;text-align:left;padding-left:15px;}
 .aviso small{font-size:8px;}
 
@@ -244,14 +244,14 @@ h3.busq_titulo{font-size:18px;color:#343434;width:48%;float:left;padding-left:5p
 .login .columna_der{padding-right:0;border-left:1px solid #cacaca;}
 .aviso .f_authen .texto{width:280px;}
 .aviso .f_authen .texto_nk{width:200px;}
-.aviso .f_authen span .ck_lbl{margin-left: 58px; font-weight:bold;}
+.aviso .f_authen span .ck_lbl{margin-left: 62px; font-weight:bold;}
 .aviso .f_acceso .texto{width:120px;}
 .aviso .f_acceso p{text-align:right;margin-bottom:10px;}
 .aviso .f_acceso p a{font-size:9px;}
 .aviso .f_registro{padding:0 10px 0 0;}
 .aviso .f_registro p{margin-bottom:2px;}
-.aviso .f_registro span{width:85px;}
-.aviso .f_registro .texto{width:92px;}
+.aviso .f_registro span{width:73px;}
+.aviso .f_registro .texto{width:103px;}
 .aviso .f_registro .urlname{background:#eaeaea;padding:2px;margin-bottom:10px;}
 .aviso .f_registro .fnacimiento span{float:none;display:block;margin-bottom:10px;}
 .aviso .f_registro .anyo{width:70px;}
